--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="css/style.css" type="text/css">
+<link rel="shortcut icon" href="https://cdn.icon-icons.com/icons2/3079/PNG/512/gun_weapon_crime_icon_191244.png">
 </head>
 <body>
 	<center>
