--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<title>gonzu</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="css/style.css" type="text/css">
 <link rel="shortcut icon" href="https://cdn.icon-icons.com/icons2/1079/PNG/512/hat_78030.png">
