--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="css/style.css" type="text/css">
 <link rel="shortcut icon" href="https://cdn.icon-icons.com/icons2/1079/PNG/512/hat_78030.png">
+<script src="js/saidwhat.js"></script>
 </head>
-<body>
+<body class=".bgr">
 	<center>
 		<div class="container">
 		  <div class="main">
@@ -22,7 +23,7 @@
 				<div class="jajaborde"></div>
 			  </h1>
 			  </div>		  
-			  <b><p> - pentesting enthusiast -</p></b>
+			  <b><p>- pentesting enthusiast -</p></b>
 			  <p>
 				  <a href="https://twitter.com/akagonzu" target="_blank" rel="noopener" title="Twitter"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z"></path></svg></a>
 				  &nbsp;&nbsp; <a href="https://instagram.com/whosgonzu" target="_blank" rel="noopener" title="Instagram"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="black" stroke="none" viewBox="0 0 24 24"><path d="M23 2H16.2C19.4 2 22,4.6 22,7.8V16.2A5.8,5.8 0 0,1 16.2,22H7.8C4.6,22 2,19.4 2,16.2V7.8A5.8,5.8 0 0,1 7.8,2M7.6,4A3.6,3.6 0 0,0 4,7.6V16.4C4,18.39 5.61,20 7.6,20H16.4A3.6,3.6 0 0,0 20,16.4V7.6C20,5.61 18.39,4 16.4,4H7.6M17.25,5.5A1.25,1.25 0 0,1 18.5,6.75A1.25,1.25 0 0,1 17.25,8A1.25,1.25 0 0,1 16,6.75A1.25,1.25 0 0,1 17.25,5.5M12,7A5,5 0 0,1 17,12A5,5 0 0,1 12,17A5,5 0 0,1 7,12A5,5 0 0,1 12,7M12,9A3,3 0 0,0 9,12A3,3 0 0,0 12,15A3,3 0 0,0 15,12A3,3 0 0,0 12,9Z" /></svg></a>
@@ -35,6 +36,6 @@
 			  </div>
 			</div>
 		  </div>
-		  </center>
+		</center>
 </body>
 </html>
