--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="css/style.css" type="text/css">
 <link rel="shortcut icon" href="https://cdn.icon-icons.com/icons2/1079/PNG/512/hat_78030.png">
+<link rel="preload" as="image" href="../img/1.png">
+<link rel="preload" as="image" href="../img/2.png">
 <script src="js/saidwhat.js"></script>
 </head>
 <body class=".bgr">
